# sjk_kafka

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.h  jpg_codec.cpp  pull_jpg2ram.cpp  pull_jpg2ram.h  push_jpg2lpa.cpp  push_jpg2lpa.h  push_json.cpp  push_json.h
src/kafka/: CMakeLists.txt  sjk_master.cpp  test_curl_post_json.cpp  test_curl_upload.cpp  test_jpg_puller.cpp  test_jpg_pusher.cpp
